--- a/public/views/game.html
+++ b/public/views/game.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class="loading-container">
+    <div id="loading-container">
         <h1>Game test</h1>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/game.js"></script>
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="game_board">
+    <div id="game_board" style="display: none;">
         <div id="timer"></div>
         <div id="enemy-cards"></div>
         <div id="turn_nickname"></div>
