--- a/public/views/game.html
+++ b/public/views/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>game</title>
+    <title>Marvel Card Masters</title>
     <link rel="stylesheet" href="/game.css" />
   </head>
 
@@ -26,10 +26,18 @@
 
     <div id="game_board" style="display: none;">
         <div id="timer"></div>
+        <div id="enemy-name"></div>
+        <img id="enemy-portrait"></img>
+        <div id="enemy-hp"></div>
+        <div id="enemy-mana"></div>
         <div id="enemy-cards"></div>
         <div id="turn_nickname"></div>
         <button id="pass_btn" onclick="passOnClick()">Pass</button>
+        <div id="my-mana"></div>
         <div id="cards"></div>
+        <img id="my-portrait"></img>
+        <div id="my-name"></div>
+        <div id="my-hp"></div>
     </div>
   </body>
 </html>
