--- a/public/views/main.html
+++ b/public/views/main.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>main</title>
+    <title>Marvel Card Masters - Lobby</title>
     <link rel="stylesheet" href="/main.css" />
 </head>
 
 <body>
     <div id="con">
-        <h1>Main</h1>
+        <h1>Lobby</h1>
         <img id="user_avatar" alt="img">
         <h2>Login: <span id="login"></span></h2>
         <a href="/game">PLAY</a>
