--- a/public/views/register.html
+++ b/public/views/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Signup</title>
+    <title>Marvel Card Masters - Signup</title>
     <link rel="stylesheet" href="/autorization.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
