--- a/public/views/game.html
+++ b/public/views/game.html
@@ -33,6 +33,7 @@
         <div id="enemy-cards"></div>
         <div id="turn_nickname"></div>
         <button id="pass_btn" onclick="passOnClick()">Pass</button>
+        <img src="../images/card-back.png" id="card-deck" alt="">
         <div id="my-mana"></div>
         <div id="cards"></div>
         <img id="my-portrait"></img>
