--- a/public/views/game.html
+++ b/public/views/game.html
@@ -40,5 +40,11 @@
         <div id="my-name"></div>
         <div id="my-hp"></div>
     </div>
+
+    <div id="game_over" style="display: none;">
+      <div class="game_over-container">
+        <h1 id="game_over_message"></h1>
+      </div>
+    </div>
   </body>
 </html>
