--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -1,3 +1,8 @@
+h1 {
+    margin: 0;
+    padding: 0;
+}
+
 #cards, #enemy-cards {
     display: flex;
     flex-direction: row;
@@ -16,4 +21,28 @@
     height: 100px;
     border-radius: 50%;
     display: block;
+}
+
+/* Game Over */
+
+#game_over {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100vw;
+    height: 100vh;
+    background-color: #00000077;
+}
+
+.game_over-container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#game_over_message {
+    font-size: 68px;
 }
