added settings and little design it

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -13,11 +13,7 @@
         <img id="user_avatar" alt="img">
         <h2>Login: <span id="login"></span></h2>
         <a href="/game">PLAY</a>
-        <form action="/update" method="POST" enctype="multipart/form-data">
-            <label for="image">Upload avatar</label>
-            <input type="file" name="image" />
-            <button type="submit">Upload</button>
-        </form>
+        <a href="/settings">SETTINGS</a>
     </div>
     <script src="/main.js"></script>
 </body>
