how to play added, changed bg

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -14,6 +14,7 @@
         <h2>Login: <span id="login"></span></h2>
         <a href="/game">PLAY</a>
         <a href="/settings">SETTINGS</a>
+        <a href="/howToPlay">How to Play</a>
     </div>
     <script src="/main.js"></script>
 </body>
