--- a/public/styles/settings.css
+++ b/public/styles/settings.css
@@ -10,6 +10,11 @@ body {
   padding: 0;
   font-family: Marvel, "Times New Roman", Times, serif;
   color: white;
+  overflow: auto;
+  background: linear-gradient(315deg, #682831 0%, #2e3c5f 100%);
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed;
 }
 
 .container {
@@ -25,29 +30,63 @@ body {
   backdrop-filter: blur(10px);
 }
 
-.background {
-  width: 100vw;
-  height: 100vh;
-  background-size: 250% 250%;
-  background-image: linear-gradient(
-    120deg,
-    #682831 50%,
-    rgba(46, 60, 95, 1) 50%
-  );
-  position: absolute;
-  z-index: -2;
-  animation: AnimateBG 15s ease infinite;
-}
-
-@keyframes AnimateBG {
+@keyframes gradient {
   0% {
-    background-position: 0% 50%;
+    background-position: 0% 0%;
   }
   50% {
-    background-position: 100% 50%;
+    background-position: 100% 100%;
   }
   100% {
-    background-position: 0% 50%;
+    background-position: 0% 0%;
+  }
+}
+
+.wave {
+  background: rgb(255 255 255 / 5%);
+  border-radius: 1000% 1000% 0 0;
+  position: fixed;
+  width: 200%;
+  height: 12em;
+  animation: wave 10s -3s linear infinite;
+  transform: translate3d(0, 0, 0);
+  opacity: 0.8;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.wave:nth-of-type(2) {
+  bottom: -1.25em;
+  animation: wave 18s linear reverse infinite;
+  opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+  bottom: -2.5em;
+  animation: wave 20s -1s reverse infinite;
+  opacity: 0.9;
+}
+
+@keyframes wave {
+  2% {
+    transform: translateX(1);
+  }
+
+  25% {
+    transform: translateX(-25%);
+  }
+
+  50% {
+    transform: translateX(-50%);
+  }
+
+  75% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(1);
   }
 }
 
