--- a/public/views/settings.html
+++ b/public/views/settings.html
@@ -13,7 +13,11 @@
     />
   </head>
   <body>
-    <div class="background"></div>
+    <div class="background">
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+    </div>
     <div class="wrapper">
       <form action="/logout" method="POST">
         <button class="button" type="submit">Logout</button>
