--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -1,6 +1,29 @@
-h1 {
+h1, body {
     margin: 0;
     padding: 0;
+}
+
+.board_bg {
+    margin: 0;
+    background: url('/background/GothamCity.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.board_bg::after {
+    position: absolute;
+    content: "";
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
 }
 
 #cards, #enemy-cards {
@@ -9,11 +32,87 @@ h1 {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    background-color: green;
+    background-color: rgba(0, 0, 0, 0.78);
+    overflow-x: auto;
+    padding: 20px;
 }
 
-#cards > img, #enemy-cards > img, #card-deck {
+#cards {
+    margin-top: 40px;
+    z-index: 1;
+    position: relative;
+}
+
+#enemy-cards {
+    padding: 10px 0;
+    position: relative;
+    height: 175px;
+}
+
+.card {
     width: 180px;
+}
+
+#card-deck {
+    width: 140px;
+}
+
+.enemy-card-container {
+    position: absolute;
+    left: 50px;
+    top: 0;
+}
+
+.enemy-card {
+    position: absolute;
+    top: 10px;
+    width: 120px;
+}
+
+.card-container, .card-deck_image-container {
+    width: fit-content;
+    position: relative;
+}
+
+.card-deck_image-container {
+    margin-left: 50px;
+}
+
+.card-container::before, .card-deck_image-container::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 90%;
+    height: 100%;
+    border-radius: 6px;
+    border: 2px solid #000;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+.card-container::before {
+    background: rgba(255, 83, 83, 0.46);
+} 
+
+.card-deck_image-container::before {
+    background: rgba(83, 90, 255, 0.46);
+    width: 120%;
+    height: 110%;
+}
+
+.card-container::after, .card-deck_image-container::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 70%;
+    height: 90%;
+    border-radius: 6px;
+    border: 2px solid #000;
+    background: #D9D9D9;
+    transform: translate(-50%, -50%);
+    z-index: -1;
 }
 
 #enemy-portrait, #my-portrait {
@@ -22,6 +121,112 @@ h1 {
     border-radius: 50%;
     display: block;
 }
+
+#enemy-portrait {
+
+}
+
+.about_players {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.about_player {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 20px;
+    width: 95vw;
+}
+
+.my_properties, .my_info, .opponent_info {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.my_info, .opponent_info {
+    gap: 15px;
+}
+
+.about_opponent {
+    position: absolute;
+    top: 85px;
+    right: 0;
+    z-index: 1;
+    display: flex;
+    margin-right: 30px;
+}
+
+
+#enemy-name {
+    color: white;
+    text-align: center;
+}
+
+.enemy_svg {
+    align-self: flex-end;
+}
+
+.mana_circle, .hp_circle {
+    width: fit-content;
+    position: relative;
+}
+
+#my-mana, #my-hp, #enemy-hp, #enemy-mana {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+#enemy-mana {
+    transform: translate(-55%, -80%);
+}
+
+#enemy-hp {
+    top: 40%;
+    left: 47%;
+}
+
+#my-name {
+    color: white;
+    display: flex;
+    align-items: center;
+}
+
+#pass_btn {
+    position: relative;
+    z-index: 100;
+}
+
+.game_info {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
+    z-index: 1;
+}
+
+.center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 40px 30px;
+}
+
+.card-deck-container {
+    z-index: 2;
+    position: relative;
+}
+
 
 /* Game Over */
 
