--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,165 @@
+body {
+  font-family: Marvel, "Times New Roman", Times, serif;
+  color: white;
+  margin: 0;
+  padding: 0;
+
+  overflow: auto;
+  background: linear-gradient(315deg, #682831 0%, #2e3c5f 100%);
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 26px;
+  margin-bottom: 0px;
+  padding-bottom: 0;
+}
+
+.wrapper {
+  backdrop-filter: blur(10px);
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+
+.wave {
+  background: rgb(255 255 255 / 5%);
+  border-radius: 1000% 1000% 0 0;
+  position: fixed;
+  width: 200%;
+  height: 12em;
+  animation: wave 10s -3s linear infinite;
+  transform: translate3d(0, 0, 0);
+  opacity: 0.8;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.wave:nth-of-type(2) {
+  bottom: -1.25em;
+  animation: wave 18s linear reverse infinite;
+  opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+  bottom: -2.5em;
+  animation: wave 20s -1s reverse infinite;
+  opacity: 0.9;
+}
+
+@keyframes wave {
+  2% {
+    transform: translateX(1);
+  }
+
+  25% {
+    transform: translateX(-25%);
+  }
+
+  50% {
+    transform: translateX(-50%);
+  }
+
+  75% {
+    transform: translateX(-25%);
+  }
+
+  100% {
+    transform: translateX(1);
+  }
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
 #user_avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: block;
+}
+
+.button-play {
+  padding: 10px 80px;
+  border-radius: 4px;
+  border: 2px solid white;
+  background-color: #f23952;
+  color: white;
+  font-weight: bold;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: 0.2s all;
+}
+
+.button-play:hover {
+  background-color: #b8183b;
+}
+
+.button-play:active {
+  background-color: #9a1738;
+}
+
+.button {
+  padding: 8px 25px;
+  border-radius: 4px;
+  border: none;
+  background-color: #f23952;
+  color: white;
+  font-weight: bold;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: 0.2s all;
+}
+
+.button:hover {
+  background-color: #b8183b;
+}
+
+.button:active {
+  background-color: #9a1738;
+}
+
+.play-div {
+  font-size: 32px;
+  font-family: Marvel, "Times New Roman", Times, serif;
+  font-weight: bold;
+}
+
+.button {
+  width: 160px;
+  font-size: 24px;
+}
+
+.button-div {
+  font-size: 18px;
+  font-family: Marvel, "Times New Roman", Times, serif;
+  font-weight: bold;
 }
